[gd_scene load_steps=12 format=2]

[ext_resource path="res://Recursos/Visuales/Interfaz/ventana_terminos.png" type="Texture" id=1]
[ext_resource path="res://Codigos/Locales/Objetos/Ventana_terminos.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Visuales/Interfaz/contenedor_texto_3.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Visuales/Interfaz/contenedor_texto_juni.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Visuales/Interfaz/Ventana.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 107.947, 122.109 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Recursos/Textos/Fuentes/DaxlinePro-Bold.otf"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Recursos/Textos/Fuentes/DaxlinePro-Bold.otf"

[sub_resource type="DynamicFont" id=5]
size = 56
font_data = SubResource( 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 194.848, 65.1736 )

[node name="Ventana_terminos" type="Node2D"]
pause_mode = 2
z_index = 2
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="sprite_terminos" type="Sprite" parent="Area2D"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="Area2D"]

[node name="Ventana_full" type="Node2D" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )

[node name="Ventana_grande" type="Sprite" parent="Ventana_full"]
position = Vector2( -63.405, 0 )
scale = Vector2( 1.65043, 1.65043 )
texture = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Ventana_full"]

[node name="RichTextLabel" type="RichTextLabel" parent="Ventana_full"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.0
margin_top = -359.0
margin_right = 430.0
margin_bottom = 359.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.247059, 0.243137, 0.243137, 1 )
text = "Al aceptar los siguientes términos y condiciones usted estará dando permiso para que el Sr. Rata haga las siguientes modificaciones en su sistema:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aceptar_sprite" type="Sprite" parent="Ventana_full"]
position = Vector2( 242.726, 329.627 )
scale = Vector2( 0.369085, 0.72 )
texture = ExtResource( 4 )

[node name="Cancelar_sprite" type="Sprite" parent="Ventana_full"]
position = Vector2( -263.702, 335.621 )
scale = Vector2( 0.369085, 0.72 )
texture = ExtResource( 3 )

[node name="Aceptar_t" type="RichTextLabel" parent="Ventana_full"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 111.99
margin_top = 290.221
margin_right = 461.99
margin_bottom = 397.221
mouse_filter = 2
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 0.996078, 0.976471, 1 )
text = "ACEPTAR"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancelar_t" type="RichTextLabel" parent="Ventana_full"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -431.957
margin_top = 293.558
margin_right = -81.9568
margin_bottom = 400.558
mouse_filter = 2
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 0.996078, 0.976471, 1 )
text = "CANCELAR"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aceptar" type="Area2D" parent="."]
pause_mode = 2
position = Vector2( 237.059, 322.273 )
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aceptar"]
z_index = 2
shape = SubResource( 6 )

[node name="Cancelar" type="Area2D" parent="."]
pause_mode = 2
position = Vector2( -266.372, 325.269 )
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cancelar"]
position = Vector2( 0, -2.99658 )
z_index = 2
shape = SubResource( 6 )

[node name="Timer_efecto" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Aceptar" to="." method="_on_Aceptar_input_event"]
[connection signal="input_event" from="Cancelar" to="." method="_on_Cancelar_input_event"]
[connection signal="timeout" from="Timer_efecto" to="." method="_on_Timer_efecto_timeout"]
